feat: add header

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,56 @@
 
 <body>
 
-  <header class="header"></header>
+  <header class="header">
+    <div class="container">
+      <div class="header__content">
+        <img src="./images/logo.svg" alt="logo" class="header__logo">
+        <ul class="header__list">
+          <li class="header__item">
+            <p class="header__text header__text--white">
+              Прием заявок
+            </p>
+            <p class="header__text header__text--grey">
+              до
+              <span class="header__span">11</span>
+              марта
+            </p>
+          </li>
+          <li class="header__item">
+            <p class="header__text header__text--white">
+              Получение заданий
+            </p>
+            <p class="header__text header__text--grey">
+              <span class="header__span">4</span>
+              марта
+            </p>
+          </li>
+          <li class="header__item">
+            <p class="header__text header__text--white">
+              Внесение ответов
+            </p>
+            <p class="header__text header__text--grey">
+              до
+              <span class="header__span">18</span>
+              марта
+            </p>
+          </li>
+          <li class="header__item">
+            <p class="header__text header__text--white">
+              Итоги конкурса
+            </p>
+            <p class="header__text header__text--grey">
+              <span class="header__span">19</span>
+              марта
+            </p>
+          </li>
+        </ul>
+        <button class="header__btn">
+          Вход в кабинет
+        </button>
+      </div>
+    </div>
+  </header>
   <div class="wrapper">
     <main class="main">
       
