feat: add adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -120,7 +120,10 @@
             </div>
           </div>
           <div class="img">
-            <img src="./images/students.png" alt="students img" class="img__students">
+            <picture>
+              <source media="(max-width: 660px)" srcset="./images/min-students.png">
+              <img src="./images/students.png" alt="students img" class="img__students">
+            </picture>
           </div>
         </div>
         
